2_module/2_css/1_css_zen_garden/styles.css
/* ... */
.navigationListLink:hover {
    color: rgb(128, 155, 126);
}

/* ---- Media Queries ---- */

@media only screen and (min-width: 1100px) {
    /* ---- Header ---- */
    .visibleLarge {
        display: inline-block;
    }

    .invisibleLarge {
        display: none;
    }

    #headTextContainer {
        margin-top: 25px;
        text-align: left;
    }

    #headText {
        font-size: 52px;
    }

    #headTextSub {
        margin-left: 15px;
        margin-top: 10px;
        font-size: 30px;
    }

    #headLogo {
        margin-top: 70px;
        margin-left: 100px;
        height: 120px;
    }

    #headerBox {
        display: flex;
        flex-direction: row;
        justify-content: left;
    }

    /* ---------- navigation links header section ---------- */
    .navLinkDivLarge {
        display: inline;
    }

    .navLinkLarge {
        display: inline;
    }

    #navLinkBox {
        display: block;
        grid-area: headLink;
        position: absolute;
        top: 0;
        right: 0;
        height: 259px;
        width: 33%;
        margin: 0;
        padding: 0;
        background-color: rgba(33, 84, 95, 0.3);
    }

    #navDivLarge {
        background-color: rgba(255, 255, 255, 0.1);
        display: inline;
        height: 80px;
        width: 60%;
        position: absolute;
        top: 89.5px;
        right: 101px;
        transition: background-color 110ms linear;
    }

    #navDivLarge:hover {
        background-color: rgba(255, 255, 255, 0.2);
    }

    #navDivLarge:active {
        background-color: rgba(255, 255, 255, 0.4);
    }

    .navTextLarge {
        position: absolute;
        color: #fff;
        font-size: 18px;
        line-height: 80px;
        width: 100%;
        text-align: center;
        opacity: 0.6;
        transition: opacity 200ms linear;
        display: inline;
    }

    .navTextLarge:hover {
        opacity: 1;
    }

    #designNextRightLarge {
        width: 80px;
        height: 80px;
        right: 20px;
        top: 89.5px;
        position: absolute;
        display: inline;
        text-align: center;
        line-height: 68px;
        font-size: 100px;
        color: #fff;
        background-color: rgba(255, 255, 255, 0.1);
        transition: background-color 110ms linear;
        overflow: hidden;
    }

    .opacityDivLarge {
        opacity: 0.6;
        height: 80px;
        width: 80px;
        transition: opacity 200ms linear;
        display: inline;
    }

    .opacityDivLarge:hover {
        opacity: 1;
    }

    #designNextRightLarge:hover {
        background-color: rgba(255, 255, 255, 0.2);
    }

    #designNextRightLarge:active {
        background-color: rgba(255, 255, 255, 0.4);
    }

    /* ---------- summary section ---------- */
    #summaryBox {
        height: 1111px;
    }

    .summarySub {
        padding-left: 120px;
        padding-right: 0;
        width: 50%;
    }

    h3 {
        font-family: "Julius Sans One", sans-serif;
        margin-top: 36px;
        font-size: 30px;
        font-kerning: 5px;
    }

    .paragraph {
        margin-top: 20px;
        font-family: "Crimson Text", serif;
        font-size: 24px;
        line-height: 38px;
        font-weight: 100;
    }

    #designLinksBox {
        background-color: #e5ede8;
        position: absolute;
        top: 260px;
        right: 0;
        height: 1111px;
        width: 33%;
    }

    #designList > li {
        width: 60%;
        height: 110px;
        border-top: solid 1px #d9e3dc;
        margin-left: 60px;
        display: flex;
        align-items: center;
    }

    #designList:first-child {
        margin-top: 60px;
    }

    #designList > li:first-child {
        border-top: none;
    }

    #designList > li:hover {
        background-image: none;
    }

    .itemName {
        display: flex;
        flex-wrap: wrap;
        padding: 0;
    }

    .designName {
        font-size: 22px;
    }

    .designText {
        font-size: 20px;
    }

    .personName {
        font-size: 16px;
    }

    /* ---------- instruction section ---------- */
    #instructionBox {
        height: 952px;
    }

    .instructionSub {
        padding-left: 120px;
        padding-right: 0;
        color: #325050;
        width: 50%;
    }

    #navigationListBox {
        position: absolute;
        top: 1371px;
        right: 0;
        height: 952px;
        width: 33%;
        background-color: rgba(138, 188, 159, 0.22);
        background-image: none;
    }

    #navigationList {
        display: flex;
        flex-wrap: wrap;
        height: auto;
        width: 100%;
    }

    #navigationList > li {
        width: 60%;
        height: 74px;
        display: flex;
        align-items: center;
        border-top: solid 1px #a0b9ad;
        margin-left: 60px;
    }

    #navigationList > li:first-child {
        margin-top: 60px;
    }

    .navigationListLink {
        margin-left: 0;
        color: #1a5952;
        font-size: 22px;
        font-family: "Libre Franklin", sans-serif;
        font-weight: 100;
        transition: color 120ms linear;
    }

    /* ---------- requirements section ---------- */
    #requirementBox {
        height: 1021;
    }

    .requirementSub {
        padding-left: 120px;
        padding-right: 0;
        color: #325050;
        width: 50%;
    }

    #spaceFillerDiv {
        display: block;
        position: absolute;
        top: 2323px;
        right: 0;
        height: 1021px;
        width: 33%;
        background-color: rgba(138, 188, 159, 0.22);
        background-image: none;
    }
}

